<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:ignore="RtlCompat">

    <ImageView
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:scaleType="fitXY"
        android:alpha="0.5"
        android:src="@drawable/shadow"
        android:layout_width="160dp"
        android:layout_height="400dp" />

    <android.support.v4.widget.NestedScrollView
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_menu_pro_pic"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/txt_menu_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Pauline McGivern"
                android:textStyle="normal"
                android:fontFamily="@font/regular"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_menu_email"
                style="@style/Text_Detail"
                android:fontFamily="@font/regular"
                android:textStyle="normal"
                android:text="paulinemcgivern@gmail.com" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/txt_menu_home"
                style="@style/Text_SubHead"
                android:text="@string/home" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <!--<TextView-->
                <!--android:id="@+id/txt_menu_category"-->
                <!--style="@style/Text_SubHead"-->
                <!--android:text="@string/store" />-->

            <!--<Space-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="20dp" />-->

            <TextView
                android:id="@+id/txt_menu_reviews"
                style="@style/Text_SubHead"
                android:text="@string/my_reviews" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/txt_menu_profile"
                style="@style/Text_SubHead"
                android:text="@string/my_profile" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/txt_menu_share_app"
                style="@style/Text_SubHead"
                android:text="@string/share_app" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/txt_menu_terms"
                style="@style/Text_SubHead"
                android:text="@string/terms_conditions" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/txt_menu_signout"
                style="@style/Text_SubHead"
                android:text="@string/sign_out" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>