<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activities.GiveRatingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_img_rating"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:padding="8dp"
            android:src="@drawable/back_white_arrow"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/give_your_rating"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal" />

    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/Text_SubHead"
                android:fontFamily="@font/bold"
                android:text="@string/give_your_rating"
                android:textStyle="normal" />

            <TextView
                style="@style/Text_Detail"
                android:layout_marginTop="20dp"
                android:text="@string/over_all_rating" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/overall_one"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/star_one_unfill" />

                <ImageView
                    android:id="@+id/overall_two"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/star_two_unfill" />

                <ImageView
                    android:id="@+id/overall_three"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/star_three_fill" />

                <ImageView
                    android:id="@+id/overall_four"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/star_four_unfill" />

                <ImageView
                    android:id="@+id/overall_five"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/star_five_unfill" />
            </LinearLayout>

            <TextView
                android:id="@+id/overall_txt"
                style="@style/Text_Detail"
                android:layout_marginTop="10dp"
                android:text="Very Good"
                android:textColor="@color/colorPrimaryDark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/lineColor" />

            <TextView
                style="@style/Text_Detail"
                android:layout_marginTop="10dp"
                android:text="@string/quality_rating" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/quality_one"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/star_one_unfill" />

                <ImageView
                    android:id="@+id/quality_two"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/star_two_unfill" />

                <ImageView
                    android:id="@+id/quality_three"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/star_three_unfill" />

                <ImageView
                    android:id="@+id/quality_four"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/star_four_fill" />

                <ImageView
                    android:id="@+id/quality_five"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/star_five_unfill" />
            </LinearLayout>

            <TextView
                android:id="@+id/quality_txt"
                style="@style/Text_Detail"
                android:layout_marginTop="10dp"
                android:text="Better"
                android:textColor="@color/colorPrimaryDark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/lineColor" />

            <TextView
                style="@style/Text_Detail"
                android:layout_marginTop="10dp"
                android:text="@string/price_rating" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/price_one"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/star_one_unfill" />

                <ImageView
                    android:id="@+id/price_two"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/star_two_unfill" />

                <ImageView
                    android:id="@+id/price_three"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/star_three_unfill" />

                <ImageView
                    android:id="@+id/price_four"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/star_four_fill" />

                <ImageView
                    android:id="@+id/price_five"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/star_five_unfill" />
            </LinearLayout>

            <TextView
                android:id="@+id/price_txt"
                style="@style/Text_Detail"
                android:layout_marginTop="10dp"
                android:text="Better"
                android:textColor="@color/colorPrimaryDark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/lineColor" />

            <TextView
                style="@style/Text_Detail"
                android:layout_marginTop="10dp"
                android:text="@string/benefit_rating" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/benefit_one"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/star_one_unfill" />

                <ImageView
                    android:id="@+id/benefit_two"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/star_two_unfill" />

                <ImageView
                    android:id="@+id/benefit_three"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/star_three_unfill" />

                <ImageView
                    android:id="@+id/benefit_four"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/star_four_fill" />

                <ImageView
                    android:id="@+id/benefit_five"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/star_five_unfill" />
            </LinearLayout>

            <TextView
                android:id="@+id/benefit_txt"
                style="@style/Text_Detail"
                android:layout_marginTop="10dp"
                android:text="Better"
                android:textColor="@color/colorPrimaryDark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/lineColor" />

            <TextView
                style="@style/Text_SubHead"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/bold"
                android:text="@string/give_more_info"
                android:textStyle="normal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/white_btn_bg"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/rating_edit_txt"
                    style="@style/EditText"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30dp"
                    android:editable="true"
                    android:singleLine="false"
                    android:inputType="textMultiLine"
                    android:gravity="top|left" />

                <TextView
                    style="@style/SubTitle"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="5dp"
                    android:gravity="right"
                    android:text="(160 Max)" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_add_review"
                style="@style/Button_Red"
                android:layout_margin="30dp"
                android:text="@string/add_your_review" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>